tests/sumo/errors/routes/stops/busstop_out_of_order_ignore/vehroutes.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Wed Mar 11 22:22:47 2020 by Eclipse SUMO Version v1_5_0+0662-a598ecae47
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <vehroute-output value="vehroutes.xml"/>
    </output>

    <processing>
        <ignore-route-errors value="true"/>
        <default.speeddev value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <vehicle id="correct" depart="0.00" arrival="112.00">
        <route edges="beg end"/>
        <stop busStop="bs0" duration="10.00"/>
        <stop busStop="bs1" duration="10.00"/>
        <stop busStop="bs2" duration="10.00"/>
        <stop busStop="bs3" duration="10.00"/>
    </vehicle>

    <vehicle id="wrong1" depart="100.00" arrival="195.00">
        <route edges="beg end"/>
        <stop busStop="bs1" duration="10.00"/>
        <stop busStop="bs2" duration="10.00"/>
        <stop busStop="bs3" duration="10.00"/>
    </vehicle>

    <vehicle id="wrong2" depart="200.00" arrival="294.00">
        <route edges="beg end"/>
        <stop busStop="bs0" duration="10.00"/>
        <stop busStop="bs1" duration="10.00"/>
        <stop busStop="bs3" duration="10.00"/>
    </vehicle>

    <vehicle id="wrong3" depart="300.00" arrival="394.00">
        <route edges="beg end"/>
        <stop busStop="bs0" duration="10.00"/>
        <stop busStop="bs2" duration="10.00"/>
        <stop busStop="bs3" duration="10.00"/>
    </vehicle>

    <vehicle id="wrong_all" depart="400.00" arrival="459.00">
        <route edges="beg end"/>
        <stop busStop="bs3" duration="10.00"/>
    </vehicle>

</routes>
